Finished .exe and pc-app