@@ -4,6 +4,8 @@ plugins {
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
+    id 'com.github.johnrengelman.shadow' version '7.1.2' //Comentar esta linea si no hace falta
+
 }
 
 group 'org.example'
@@ -66,13 +68,32 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    imageZip = project.file("${buildDir}/distributions/SaveMate-${version}.zip")
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages',  '--add-modules', 'jdk.crypto.ec']
     launcher {
-        name = 'app'
+        name = 'SaveMate'
+    }
+
+    jpackage {
+        installerType = 'exe'
+        installerName = 'SaveMateInstaller'
+        appVersion = '1.0'
+        icon = 'logo_multires.ico'
+        vendor = 'Nestor'
+        description = 'SaveMate - Gestor de gastos e ingresos personales.'
+        installerOptions = [
+                '--win-menu',
+                '--win-shortcut',
+                '--win-dir-chooser',
+                '--win-menu-group', 'SaveMate'
+        ]
     }
 }
 
 jlinkZip {
     group = 'distribution'
+}
+
+shadowJar {
+    archiveClassifier.set('') // Esto hace que el jar generado se llame SaveMate.jar (sin -all)
 }
